# RPI_UAV

./: README.md
code/: main.cpp
fly_control/: CMakeLists.txt  control.py  logger.py  main.cpp  main.py  motors.py  mpu6050.py
fly_control/common/: logger.cpp  logger.h
fly_control/device/: motor.cpp  motor.h  mpu6050.cpp  mpu6050.h
fly_control/include/common/: logger.h
fly_control/include/device/: gpio_in.h  handle.h  motor.h  mpu6050.h  power.h  remote_control.h
fly_control/src/common/: logger.cpp
fly_control/src/device/: gpio_in.cpp  handle.cpp  motor.cpp  mpu6050.cpp  power.cpp  remote_control.cpp
influx/: install_influx.sh
wifi/: install_wifi.sh  rpi-share-wifi-setup.sh
